get audio_common_msgs to build

--- a/audio_common_msgs/package.xml
+++ b/audio_common_msgs/package.xml
@@ -1,19 +1,29 @@
-<package>
-   <name>audio_common_msgs</name>
-   <version>0.3.3</version>
-   <description>
-      Messages for transmitting audio via ROS
-   </description>
-   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
-   <author>Nate Koenig</author>
-   <license>BSD</license>
-   <url type="website">http://ros.org/wiki/audio_common_msgs</url>
-   <url type="repository">https://github.com/ros-drivers/audio_common</url>
-   <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+  <name>audio_common_msgs</name>
+  <version>0.3.4</version>
+  <description>Messages for transmitting audio via ROS</description>
+  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
+  <author>Nate Koenig</author>
+  <license>BSD</license>
+  <url type="website">http://ros.org/wiki/audio_common_msgs</url>
+  <url type="repository">https://github.com/ros-drivers/audio_common</url>
+  <url type="bugtracker">https://github.com/ros-drivers/audio_common/issues</url>
 
-   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-   <build_depend>message_generation</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-   <run_depend>message_runtime</run_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <depend>rclcpp</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
